--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/x": "^1.0.0",
+    "antd": "^5.22.2",
+    "antd-style": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
