--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ant-design/x": "^1.0.0",
     "antd": "^5.22.2",
     "antd-style": "^3.7.1",
+    "markdown-it": "^14.1.0",
+    "openai": "^4.77.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -21,7 +23,10 @@
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@rsbuild/core": "^1.1.4",
+    "@rsbuild/plugin-less": "^1.1.0",
     "@rsbuild/plugin-react": "^1.0.7",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.12.0",
