--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/x": "^1.0.5",
+    "@toolkit-fe/clipboard": "^0.1.22",
     "antd": "^5.22.2",
     "antd-style": "^3.7.1",
     "markdown-it": "^14.1.0",
