--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "build": "rsbuild build",
-    "dev": "pnpm --filter @dify-chat/components build && rsbuild dev",
+    "build:pkgs": "pnpm --filter @dify-chat/components build",
+    "build": "pnpm build:pkgs && rsbuild build",
+    "dev": "pnpm build:pkgs && rsbuild dev",
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview"
