--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -59,6 +59,7 @@
     "storybook": "^8.6.0",
     "storybook-addon-rslib": "^1.0.0",
     "storybook-react-rsbuild": "^1.0.0",
+    "tailwindcss": "^3",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   },
