chore: add dev:main script (only start main project)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build:pkgs": "pnpm --filter @dify-chat/* build",
     "build": "pnpm build:pkgs && rsbuild build",
-    "dev": "pnpm build:pkgs && rsbuild dev",
+    "dev": "pnpm build:pkgs && pnpm dev:main",
+    "dev:main": "rsbuild dev",
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview"
