--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -70,6 +70,7 @@
   "dependencies": {
     "@dify-chat/api": "workspace:^",
     "@dify-chat/helpers": "workspace:^",
+    "echarts": "^5.6.0",
     "markdown-it": "^14.1.0"
   }
 }
