--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,15 +16,15 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
+  # 构建
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      - uses: pnpm/action-setup@v4 # pnpm is optional but recommended, you can also use npm / yarn
+          fetch-depth: 0
+      - uses: pnpm/action-setup@v4
         with:
           cache: pnpm
       - name: Setup Node
@@ -36,7 +36,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: pnpm install
-      - name: Build with Vite
+      - name: Build with Rsbuild and Rslib
         run: |
           pnpm run build
       - name: Upload artifact
@@ -44,7 +44,7 @@ jobs:
         with:
           path: dist
 
-  # Deployment job
+  # 部署
   deploy:
     environment:
       name: github-pages
