--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd-style": "^3.7.1",
     "markdown-it": "^14.1.0",
     "openai": "^4.87.3",
+    "pure-react-router": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "semver": "^7.7.1"
