--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -38,5 +38,8 @@
     "@types/node": "^22.13.10",
     "typescript": "^5.8.2",
     "vitest": "^3.0.9"
+  },
+  "dependencies": {
+    "ahooks": "^3.8.4"
   }
 }
