--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -71,6 +71,7 @@
     "@dify-chat/api": "workspace:^",
     "@dify-chat/helpers": "workspace:^",
     "@lexmin0412/markdown-it-echarts": "^0.1.3",
-    "markdown-it": "^14.1.0"
+    "markdown-it": "^14.1.0",
+    "react-photo-view": "^1.2.7"
   }
 }
