--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "tailwindcss": "3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "markdown-it-katex-gpt@1.1.0": "patches/markdown-it-katex-gpt@1.1.0.patch"
+    }
   }
 }
