chore: 移除markdown-it-katex-gpt的补丁并更新依赖
移除不再需要的markdown-it-katex-gpt补丁文件，并将依赖更新至最新版本1.1.1，以简化项目维护

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -72,7 +72,7 @@
     "@dify-chat/helpers": "workspace:^",
     "@lexmin0412/markdown-it-echarts": "^0.1.4",
     "markdown-it": "^14.1.0",
-    "markdown-it-katex-gpt": "1.1.0",
+    "markdown-it-katex-gpt": "^1.1.1",
     "react-photo-view": "^1.2.7"
   }
 }
