--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"dev:main": "rsbuild dev",
 		"format": "prettier --write .",
 		"lint": "eslint .",
-		"preview": "rsbuild preview"
+		"preview": "rsbuild preview",
+		"prepare": "husky"
 	},
 	"packageManager": "pnpm@8.9.2",
 	"dependencies": {
@@ -47,6 +48,8 @@
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"globals": "^16.0.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.0",
 		"prettier": "^3.5.3",
 		"tailwindcss": "3",
 		"typescript": "^5.8.2",
