build: 添加 @rsbuild/plugin-source-build 插件并配置子包构建, 支持开发时的 Monorepo 整体热更新

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,10 +19,12 @@
 	"type": "module",
 	"exports": {
 		".": {
+			"source": "./src/index.tsx",
 			"types": "./dist/index.d.ts",
 			"import": "./dist/index.js"
 		}
 	},
+	"source": "./src/index.tsx",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"files": [
