--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -8,7 +8,8 @@
 		"isolatedModules": true,
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
-		"useDefineForClassFields": true
+		"useDefineForClassFields": true,
+		"composite": true
 	},
 	"include": ["src"]
 }
