--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -9,7 +9,8 @@
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
 		"useDefineForClassFields": true,
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+		"composite": true
 	},
 	"include": ["src"]
 }
