build: 区分开发和生产构建使用的 tsconfig, 修复构建流程报错的问题
将 `composite` 配置从 `tsconfig.json` 移至 `tsconfig.dev.json`，以便在开发和生产环境中分别使用不同的配置。同时更新了 `rslib.config.ts` 中的 `tsconfigPath` 配置，使其根据环境变量动态选择配置文件。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,16 +26,16 @@
 	},
 	"references": [
 		{
-			"path": "./packages/components"
+			"path": "./packages/components/tsconfig.dev.json"
 		},
 		{
-			"path": "./packages/core"
+			"path": "./packages/core/tsconfig.dev.json"
 		},
 		{
-			"path": "./packages/api"
+			"path": "./packages/api/tsconfig.dev.json"
 		},
 		{
-			"path": "./packages/helpers"
+			"path": "./packages/helpers/tsconfig.dev.json"
 		}
 	],
 	"include": ["src"]
