--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -8,8 +8,7 @@
 		"isolatedModules": true,
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
-		"useDefineForClassFields": true,
-		"composite": true
+		"useDefineForClassFields": true
 	},
 	"include": ["src"]
 }
