--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,15 +2,12 @@
 	"compilerOptions": {
 		"lib": ["ES2021"],
 		"module": "ESNext",
-		"noEmit": true,
 		"strict": true,
 		"skipLibCheck": true,
 		"isolatedModules": true,
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
-		"useDefineForClassFields": true,
-		"allowImportingTsExtensions": true,
-		"composite": true
+		"useDefineForClassFields": true
 	},
 	"include": ["src"]
 }
