--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -48,8 +48,6 @@
 		"@storybook/addon-interactions": "^8.6.10",
 		"@storybook/addon-links": "^8.6.10",
 		"@storybook/addon-onboarding": "^8.6.9",
-		"@storybook/blocks": "^8.6.9",
-		"@storybook/react": "^8.6.11",
 		"@storybook/blocks": "^8.6.11",
 		"@storybook/react": "^8.6.11",
 		"@storybook/test": "^8.6.10",
@@ -73,6 +71,7 @@
 	},
 	"dependencies": {
 		"@dify-chat/api": "workspace:^",
+		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@lexmin0412/markdown-it-echarts": "^0.1.4",
 		"markdown-it": "^14.1.0",
