--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,13 +1,8 @@
 {
+	"extends": "./tsconfig.prod.json",
 	"compilerOptions": {
-		"lib": ["ES2021"],
-		"module": "ESNext",
-		"strict": true,
-		"skipLibCheck": true,
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"moduleResolution": "bundler",
-		"useDefineForClassFields": true
-	},
-	"include": ["src"]
+		"paths": {
+			"@dify-chat/helpers": ["../helpers/src/index.ts"]
+		}
+	}
 }
