--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,14 +1,10 @@
 {
+	"extends": "./tsconfig.prod.json",
 	"compilerOptions": {
-		"lib": ["DOM", "ES2021"],
-		"module": "ESNext",
-		"jsx": "react-jsx",
-		"strict": true,
-		"skipLibCheck": true,
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"moduleResolution": "bundler",
-		"useDefineForClassFields": true
-	},
-	"include": ["src"]
+		"paths": {
+			"@dify-chat/api": ["../api/src/index.ts"],
+			"@dify-chat/core": ["../core/src/index.ts"],
+			"@dify-chat/helpers": ["../helpers/src/index.ts"]
+		}
+	}
 }
