--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,12 @@
 {
+	"extends": ["./tsconfig.prod.json"],
 	"compilerOptions": {
-		"lib": ["DOM", "ES2020"],
-		"jsx": "react-jsx",
-		"target": "ES2020",
-		"noEmit": true,
-		"skipLibCheck": true,
-		"useDefineForClassFields": true,
-
-		/* modules */
-		"module": "ESNext",
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"moduleResolution": "Bundler",
-		"allowImportingTsExtensions": true,
-
-		/* type checking */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-
-		"baseUrl": "./",
 		"paths": {
-			"@/*": ["src/*"]
+			"@/*": ["src/*"],
+			"@dify-chat/api": ["packages/api/src/index.ts"],
+			"@dify-chat/components": ["packages/components/src/index.tsx"],
+			"@dify-chat/core": ["packages/core/src/index.ts"],
+			"@dify-chat/helpers": ["packages/helpers/src/index.ts"]
 		}
-	},
-	"references": [
-		{
-			"path": "./packages/components/tsconfig.dev.json"
-		},
-		{
-			"path": "./packages/core/tsconfig.dev.json"
-		},
-		{
-			"path": "./packages/api/tsconfig.dev.json"
-		},
-		{
-			"path": "./packages/helpers/tsconfig.dev.json"
-		}
-	],
-	"include": ["src"]
+	}
 }
