--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@types/semver": "^7.5.8",
+		"dayjs": "^1.11.13",
 		"eslint": "^9.23.0",
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-hooks": "^5.2.0",
