--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.8",
 		"@eslint/js": "^9.23.0",
+		"@fingerprintjs/fingerprintjs": "^4.6.1",
 		"@rsbuild/core": "^1.3.1",
 		"@rsbuild/plugin-less": "^1.2.1",
 		"@rsbuild/plugin-react": "^1.1.1",
