--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -51,6 +51,7 @@
 		"@storybook/test": "^8.6.12",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
+		"@types/lodash-es": "^4.17.12",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"jsdom": "^26.0.0",
@@ -71,11 +72,27 @@
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
-		"markdown-it-mermaid": "workspace:^",
+		"@heroicons/react": "^2.2.0",
 		"@lexmin0412/markdown-it-echarts": "^0.1.4",
+		"@types/react-syntax-highlighter": "^15.5.13",
+		"classnames": "^2.5.1",
+		"dompurify": "^3.2.5",
+		"echarts-for-react": "^3.0.2",
+		"katex": "^0.16.22",
+		"lodash-es": "^4.17.21",
 		"markdown-it": "^14.1.0",
 		"markdown-it-katex-gpt": "^1.1.1",
+		"markdown-it-mermaid": "workspace:^",
 		"mermaid": "^11.6.0",
-		"react-photo-view": "^1.2.7"
+		"react-markdown": "^10.1.0",
+		"react-photo-view": "^1.2.7",
+		"react-syntax-highlighter": "^15.6.1",
+		"rehype-katex": "^7.0.1",
+		"rehype-raw": "^7.0.0",
+		"remark-breaks": "^4.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-math": "^6.0.0",
+		"remark-mermaidjs": "4",
+		"tailwind-merge": "^3.2.0"
 	}
 }
