--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
 			"@dify-chat/api": ["packages/api/src/index.ts"],
 			"@dify-chat/components": ["packages/components/src/index.tsx"],
 			"@dify-chat/core": ["packages/core/src/index.ts"],
-			"@dify-chat/helpers": ["packages/helpers/src/index.ts"],
-			"markdown-it-mermaid": ["packages/markdown-it-mermaid/src/index.ts"]
+			"@dify-chat/helpers": ["packages/helpers/src/index.ts"]
 		}
 	}
 }
