--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
+		"@types/pako": "^2.0.3",
 		"@toolkit-fe/clipboard": "^0.1.22",
 		"@toolkit-fe/where-am-i": "^0.1.22",
 		"ahooks": "^3.8.4",
@@ -51,6 +52,7 @@
 		"globals": "^16.0.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.0",
+		"pako": "^2.1.0",
 		"prettier": "^3.5.3",
 		"tailwindcss": "3",
 		"typescript": "^5.8.3",
