使用国内镜像站docker镜像

--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,5 @@
+#容器镜像
+DOCKER_IMAGE=crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat
 #启用https
 NGINX_HTTPS_ENABLED=false
 #nginx监听端口
