--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   dify-chat:
     container_name: dify-chat
-    image: dify-chat:latest
+    image: ${DOCKER_IMAGE}
     volumes:
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
@@ -10,6 +10,7 @@ services:
       - ./nginx/ssl:/etc/ssl
     ports:
       - ${EXPOSE_NGINX_PORT}:${NGINX_PORT}
+      #如需启用ssl，请编辑.env文件并将证书放置在ssl目录
       - ${EXPOSE_NGINX_SSL_PORT}:${NGINX_SSL_PORT}
     entrypoint: [ 'sh', '-c', "cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh" ]
     networks:
