通过certbot全自动申请letsencrypt签发的免费ssl证书

--- a/docker/.env
+++ b/docker/.env
@@ -17,7 +17,12 @@ NGINX_SSL_CERT_KEY_FILENAME=cakey.key
 #nginx ssl协议
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
 #nginx server_name
-NGINX_SERVER_NAME=dify-chat.com
+NGINX_SERVER_NAME=
+#CERTBOT SSL(letsencrypt)
+CERTBOT_DOMAIN=
+NGINX_ENABLE_CERTBOT_CHALLENGE=false
+CERTBOT_EMAIL=
+CERTBOT_OPTIONS=
 #nginx work进程数量
 NGINX_WORKER_PROCESSES=8
 #nginx日志时区
