--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -3,6 +3,12 @@
 server {
     listen ${NGINX_PORT};
     server_name ${NGINX_SERVER_NAME};
+    location / {
+      root /var/www/html;
+      autoindex on;
+      autoindex_exact_size off;
+      autoindex_localtime on;
+    }
     location ^~ /dify-chat {
       alias /app/dify-chat/;
       index index.html;
