自动签发证书不再需要使用现有证书开启https 	新增http2配置   docker/.env         修复一些错误   docker/docker-compose.yaml         修复部分情况rewrite不生效的问题   docker/nginx/conf.d/default.conf.template 	修复签发证书路径错误导致无法正确应用到nginx配置的问题   docker/nginx/docker-entrypoint.sh         新增http2、HSTS配置   docker/nginx/https.conf.template

--- a/docker/.env
+++ b/docker/.env
@@ -1,27 +1,27 @@
-#容器镜像
-DOCKER_IMAGE=crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat
 #启用https
-NGINX_HTTPS_ENABLED=false
+NGINX_HTTPS_ENABLED=true
 #nginx监听端口
 NGINX_PORT=80
 #nginx https监听端口
 NGINX_SSL_PORT=443
 #容器暴露端口
-EXPOSE_NGINX_PORT=8080
+EXPOSE_NGINX_PORT=80
 #容器https暴露端口
-EXPOSE_NGINX_SSL_PORT=8443
+EXPOSE_NGINX_SSL_PORT=443
+#启用http2
+SSL_HTTP2=true
 #SSL证书
-NGINX_SSL_CERT_FILENAME=cacert.pem
+NGINX_SSL_CERT_FILENAME=cacert.crt
 #SSL证书key
 NGINX_SSL_CERT_KEY_FILENAME=cakey.key
 #nginx ssl协议
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
 #nginx server_name
-NGINX_SERVER_NAME=
+NGINX_SERVER_NAME="dify-chat.smartcare.org.cn"
 #CERTBOT SSL(letsencrypt)
-CERTBOT_DOMAIN=
-NGINX_ENABLE_CERTBOT_CHALLENGE=false
-CERTBOT_EMAIL=
+CERTBOT_DOMAIN="dify-chat.smartcare.org.cn"
+NGINX_ENABLE_CERTBOT_CHALLENGE=true
+CERTBOT_EMAIL="mail@smartcare.org.cn"
 CERTBOT_OPTIONS=
 #nginx work进程数量
 NGINX_WORKER_PROCESSES=8
@@ -31,3 +31,5 @@ TZ=utf+8
 NGINX_KEEPALIVE_TIMEOUT=60
 #nginx最大提交大小
 NGINX_CLIENT_MAX_BODY_SIZE=100M
+#详细日志，相当于日志等级notice
+NGINX_ENTRYPOINT_QUIET_LOGS=1
