--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -1,18 +1,19 @@
-# Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
-
 server {
     listen ${NGINX_PORT};
     server_name ${NGINX_SERVER_NAME};
+
     location / {
-      root /var/www/html;
-      autoindex on;
-      autoindex_exact_size off;
-      autoindex_localtime on;
+        root /var/www/html;
+        autoindex on;
+        autoindex_exact_size off;
+        autoindex_localtime on;
     }
+
     location ^~ /dify-chat {
-      alias /app/dify-chat/;
-      index index.html;
-      rewrite /dify-chat/chat /dify-chat/;
+        root /app;
+        index index.html;
+        rewrite /dify-chat/chat /dify-chat/ last;
     }
+
     ${HTTPS_CONFIG}
 }
