docker镜像改为默认阿里云镜像仓库拉取

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     command: [ 'tail', '-f', '/dev/null' ]
   dify-chat:
     container_name: dify-chat
-    image: dify-chat:latest
+    image: ${DOCKER_IMAGE}
     volumes:
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
