--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 DOCKER_IMAGE=crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat
 #启用https
-NGINX_HTTPS_ENABLED=true
+NGINX_HTTPS_ENABLED=false
 #nginx监听端口
 NGINX_PORT=80
 #nginx https监听端口
@@ -10,19 +10,19 @@ EXPOSE_NGINX_PORT=80
 #容器https暴露端口
 EXPOSE_NGINX_SSL_PORT=443
 #启用http2
-SSL_HTTP2=true
+SSL_HTTP2=false
 #SSL证书
-NGINX_SSL_CERT_FILENAME=cacert.crt
+NGINX_SSL_CERT_FILENAME=
 #SSL证书key
-NGINX_SSL_CERT_KEY_FILENAME=cakey.key
+NGINX_SSL_CERT_KEY_FILENAME=
 #nginx ssl协议
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
 #nginx server_name
-NGINX_SERVER_NAME="dify-chat.smartcare.org.cn"
+NGINX_SERVER_NAME=
 #CERTBOT SSL(letsencrypt)
-CERTBOT_DOMAIN="dify-chat.smartcare.org.cn"
-NGINX_ENABLE_CERTBOT_CHALLENGE=true
-CERTBOT_EMAIL="mail@smartcare.org.cn"
+CERTBOT_DOMAIN=
+NGINX_ENABLE_CERTBOT_CHALLENGE=false
+CERTBOT_EMAIL=
 CERTBOT_OPTIONS=
 #nginx work进程数量
 NGINX_WORKER_PROCESSES=8
