chore: 升级 pnpm 到 v10, 将所有依赖项版本替换为 catalog: 协议，简化依赖管理

--- a/package.json
+++ b/package.json
@@ -11,51 +11,51 @@
 		"preview": "rsbuild preview",
 		"prepare": "husky"
 	},
-	"packageManager": "pnpm@8.9.2",
+	"packageManager": "pnpm@10.8.1",
 	"dependencies": {
-		"@ant-design/icons": "^5.6.1",
-		"@ant-design/x": "^1.1.1",
+		"@ant-design/icons": "catalog:",
+		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
-		"@types/pako": "^2.0.3",
-		"@toolkit-fe/clipboard": "^0.1.22",
-		"@toolkit-fe/where-am-i": "^0.1.22",
-		"ahooks": "^3.8.4",
-		"antd": "^5.24.7",
-		"antd-style": "^3.7.1",
-		"markdown-it": "^14.1.0",
-		"openai": "^4.94.0",
-		"pure-react-router": "^0.2.3",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"semver": "^7.7.1"
+		"@types/pako": "catalog:",
+		"@toolkit-fe/clipboard": "catalog:",
+		"@toolkit-fe/where-am-i": "catalog:",
+		"ahooks": "catalog:",
+		"antd": "catalog:",
+		"antd-style": "catalog:",
+		"markdown-it": "catalog:",
+		"openai": "catalog:",
+		"pure-react-router": "catalog:",
+		"react": "catalog:",
+		"react-dom": "catalog:",
+		"semver": "catalog:"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.8",
-		"@eslint/js": "^9.24.0",
-		"@fingerprintjs/fingerprintjs": "^4.6.2",
+		"@eslint/compat": "catalog:",
+		"@eslint/js": "catalog:",
+		"@fingerprintjs/fingerprintjs": "catalog:",
 		"@rsbuild/core": "^1.3.7",
-		"@rsbuild/plugin-less": "^1.2.2",
-		"@rsbuild/plugin-react": "^1.2.0",
-		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
-		"@types/markdown-it": "^14.1.2",
-		"@types/node": "^22.14.1",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"@types/semver": "^7.7.0",
-		"dayjs": "^1.11.13",
-		"eslint": "^9.24.0",
-		"eslint-plugin-react": "^7.37.5",
-		"eslint-plugin-react-hooks": "^5.2.0",
-		"globals": "^16.0.0",
-		"husky": "^9.1.7",
-		"lint-staged": "^15.5.1",
-		"pako": "^2.1.0",
-		"prettier": "^3.5.3",
-		"tailwindcss": "3",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.30.1"
+		"@rsbuild/plugin-less": "catalog:",
+		"@rsbuild/plugin-react": "catalog:",
+		"@trivago/prettier-plugin-sort-imports": "catalog:",
+		"@types/markdown-it": "catalog:",
+		"@types/node": "catalog:",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:",
+		"@types/semver": "catalog:",
+		"dayjs": "catalog:",
+		"eslint": "catalog:",
+		"eslint-plugin-react": "catalog:",
+		"eslint-plugin-react-hooks": "catalog:",
+		"globals": "catalog:",
+		"husky": "catalog:",
+		"lint-staged": "catalog:",
+		"pako": "catalog:",
+		"prettier": "catalog:",
+		"tailwindcss": "catalog:",
+		"typescript": "catalog:",
+		"typescript-eslint": "catalog:"
 	}
 }
