--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,31 +38,31 @@
 		"test": "vitest run"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "catalog:",
 		"@rsbuild/core": "~1.3.7",
-		"@rsbuild/plugin-react": "^1.2.0",
-		"@rslib/core": "^0.6.3",
-		"@storybook/addon-essentials": "^8.6.12",
-		"@storybook/addon-interactions": "^8.6.12",
-		"@storybook/addon-links": "^8.6.12",
-		"@storybook/addon-onboarding": "^8.6.12",
-		"@storybook/blocks": "^8.6.12",
-		"@storybook/react": "^8.6.12",
-		"@storybook/test": "^8.6.12",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.3.0",
-		"@types/lodash-es": "^4.17.12",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"jsdom": "^26.1.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"storybook": "^8.6.12",
-		"storybook-addon-rslib": "^1.0.1",
-		"storybook-react-rsbuild": "^1.0.1",
-		"tailwindcss": "^3",
-		"typescript": "^5.8.3",
-		"vitest": "^3.1.1"
+		"@rsbuild/plugin-react": "catalog:",
+		"@rslib/core": "catalog:",
+		"@storybook/addon-essentials": "catalog:",
+		"@storybook/addon-interactions": "catalog:",
+		"@storybook/addon-links": "catalog:",
+		"@storybook/addon-onboarding": "catalog:",
+		"@storybook/blocks": "catalog:",
+		"@storybook/react": "catalog:",
+		"@storybook/test": "catalog:",
+		"@testing-library/jest-dom": "catalog:",
+		"@testing-library/react": "catalog:",
+		"@types/lodash-es": "catalog:",
+		"@types/react": "catalog:",
+		"@types/react-dom": "catalog:",
+		"jsdom": "catalog:",
+		"react": "catalog:",
+		"react-dom": "catalog:",
+		"storybook": "catalog:",
+		"storybook-addon-rslib": "catalog:",
+		"storybook-react-rsbuild": "catalog:",
+		"tailwindcss": "catalog:",
+		"typescript": "catalog:",
+		"vitest": "catalog:"
 	},
 	"peerDependencies": {
 		"react": ">=16.9.0",
@@ -72,28 +72,28 @@
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
-		"@heroicons/react": "^2.2.0",
-		"@lexmin0412/markdown-it-echarts": "^0.1.5",
-		"@svgdotjs/svg.js": "^3.2.4",
-		"@types/react-syntax-highlighter": "^15.5.13",
-		"classnames": "^2.5.1",
-		"dompurify": "^3.2.5",
-		"echarts-for-react": "^3.0.2",
-		"katex": "^0.16.22",
-		"lodash-es": "^4.17.21",
-		"markdown-it": "^14.1.0",
-		"markdown-it-katex-gpt": "^1.1.1",
-		"mermaid": "^11.6.0",
-		"pure-react-router": "^0.2.3",
-		"react-markdown": "^10.1.0",
-		"react-photo-view": "^1.2.7",
-		"react-syntax-highlighter": "^15.6.1",
-		"rehype-katex": "^7.0.1",
-		"rehype-raw": "^7.0.0",
-		"remark-breaks": "^4.0.0",
-		"remark-gfm": "^4.0.1",
-		"remark-math": "^6.0.0",
-		"remark-mermaidjs": "4",
-		"tailwind-merge": "^3.2.0"
+		"@heroicons/react": "catalog:",
+		"@lexmin0412/markdown-it-echarts": "catalog:",
+		"@svgdotjs/svg.js": "catalog:",
+		"@types/react-syntax-highlighter": "catalog:",
+		"classnames": "catalog:",
+		"dompurify": "catalog:",
+		"echarts-for-react": "catalog:",
+		"katex": "catalog:",
+		"lodash-es": "catalog:",
+		"markdown-it": "catalog:",
+		"markdown-it-katex-gpt": "catalog:",
+		"mermaid": "catalog:",
+		"pure-react-router": "catalog:",
+		"react-markdown": "catalog:",
+		"react-photo-view": "catalog:",
+		"react-syntax-highlighter": "catalog:",
+		"rehype-katex": "catalog:",
+		"rehype-raw": "catalog:",
+		"remark-breaks": "catalog:",
+		"remark-gfm": "catalog:",
+		"remark-math": "catalog:",
+		"remark-mermaidjs": "catalog:",
+		"tailwind-merge": "catalog:"
 	}
 }
