--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,10 +8,10 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
-		"koa": "^2.16.1",
-		"koa-bodyparser": "^4.4.1",
-		"koa-cors": "^0.0.16",
-		"koa-router": "^12.0.0"
+		"koa": "catalog:",
+		"koa-bodyparser": "catalog:",
+		"koa-cors": "catalog:",
+		"koa-router": "catalog:"
 	},
 	"keywords": [],
 	"author": "",
