--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,10 @@
 name: release
 
 on:
-  schedule:
-    - cron: '0 13 * * *'  # This schedule runs every 13:00:00Z(21:00:00+08:00)
+   push:
+    branches: [main]
   # The "create tags" trigger is specifically focused on the creation of new tags, while the "push tags" trigger is activated when tags are pushed, including both new tag creations and updates to existing tags.
-  create:
+   create:
     tags:
       - "v*.*.*"                  # normal release
       - "nightly"                 # the only one mutable tag
