--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,12 +46,12 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
       - name: Build and push full image to Aliyun
-        run:
-           docker login --username=${{ secrets.ALIYUN_REGISTRY_USER }} --password=${{ secrets.ALIYUN_REGISTRY_PASSWORD }} ${{ secrets.ALIYUN_REGISTRY }} && \
-           docker build . -t ${{ secrets.ALIYUN_REGISTRY }}/{{ secrets.ALIYUN_NAME_SPACE }}/dify-chat:nightly && \
-           docker push ${{ secrets.ALIYUN_REGISTRY }}/{{ secrets.ALIYUN_NAME_SPACE }}/dify-chat:nightly
+        run: |
+           docker login --username=${{ secrets.ALIYUN_REGISTRY_USER }} --password=${{ secrets.ALIYUN_REGISTRY_PASSWORD }} ${{ secrets.ALIYUN_REGISTRY }}  \
+             docker build . -t ${{ secrets.ALIYUN_REGISTRY }}/{{ secrets.ALIYUN_NAME_SPACE }}/dify-chat:nightly  \
+             docker push ${{ secrets.ALIYUN_REGISTRY }}/{{ secrets.ALIYUN_NAME_SPACE }}/dify-chat:nightly
       - name: Build and push full image to HuaweiCloud
-        run:
-           docker login --username=${{ secrets.HUAWEICLOUD_REGISTRY_USER }} --password=${{ secrets.HUAWEICLOUD_REGISTRY_PASSWORD }} ${{ secrets.HUAWEICLOUD_REGISTRY }} && \
-           docker build . -t ${{ secrets.HUAWEICLOUD_REGISTRY }}/dify-chat/dify-chat:nightly && \
-           docker push ${{ secrets.HUAWEICLOUD_REGISTRY }}/dify-chat//dify-chat:nightly
+        run: |
+           docker login --username=${{ secrets.HUAWEICLOUD_REGISTRY_USER }} --password=${{ secrets.HUAWEICLOUD_REGISTRY_PASSWORD }} ${{ secrets.HUAWEICLOUD_REGISTRY }}  \
+             docker build . -t ${{ secrets.HUAWEICLOUD_REGISTRY }}/dify-chat/dify-chat:nightly  \
+             docker push ${{ secrets.HUAWEICLOUD_REGISTRY }}/dify-chat//dify-chat:nightly
