chore: 补充合并冲突导致的 catalog 定义遗漏

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@eslint/compat": "catalog:",
 		"@eslint/js": "catalog:",
 		"@fingerprintjs/fingerprintjs": "catalog:",
-		"@rsbuild/core": "^1.3.7",
+		"@rsbuild/core": "catalog:",
 		"@rsbuild/plugin-less": "catalog:",
 		"@rsbuild/plugin-react": "catalog:",
 		"@trivago/prettier-plugin-sort-imports": "catalog:",
