--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,9 +13,10 @@ catalog:
   '@fingerprintjs/fingerprintjs': ^4.6.2
   '@heroicons/react': ^2.2.0
   '@lexmin0412/markdown-it-echarts': ^0.1.5
+  '@rsbuild/core': ^1.3.8
   '@rsbuild/plugin-less': ^1.2.2
   '@rsbuild/plugin-react': ^1.2.0
-  '@rslib/core': ^0.6.3
+  '@rslib/core': ^0.6.4
   '@storybook/addon-essentials': ^8.6.12
   '@storybook/addon-interactions': ^8.6.12
   '@storybook/addon-links': ^8.6.12
