添加中国大陆镜像站docker镜像   .env

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,8 @@
-DOCKER_IMAGE=crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat
+
+#中国大陆镜像加速
+#crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat:nightly
+#swr.cn-east-3.myhuaweicloud.com/dify-chat/dify-chat:nightly
+DOCKER_IMAGE=hello2008/dify-chat:nightly
 #启用https
 NGINX_HTTPS_ENABLED=false
 #nginx监听端口
