chore: add classnames dependency

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
-		"@types/pako": "catalog:",
 		"@toolkit-fe/clipboard": "catalog:",
 		"@toolkit-fe/where-am-i": "catalog:",
+		"@types/pako": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
 		"antd-style": "catalog:",
+		"classnames": "catalog:",
 		"markdown-it": "catalog:",
 		"openai": "catalog:",
 		"pure-react-router": "catalog:",
