chore: 增加 @ant-design/cssinjs 依赖(antd 低版本浏览器兼容所需)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"packageManager": "pnpm@10.8.1",
 	"dependencies": {
+		"@ant-design/cssinjs": "catalog:",
 		"@ant-design/icons": "catalog:",
 		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
