--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ onlyBuiltDependencies:
   - core-js
   - esbuild
 catalog:
+  '@ant-design/cssinjs': ^1.23.0
   '@ant-design/icons': ^5.6.1
   '@ant-design/x': ^1.1.1
   '@biomejs/biome': ^1.9.4
