--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"semver": "catalog:"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.2",
 		"@eslint/compat": "catalog:",
 		"@eslint/js": "catalog:",
 		"@fingerprintjs/fingerprintjs": "catalog:",
