chore(prettier): 添加 prettier-plugin-tailwindcss 插件

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"lint-staged": "catalog:",
 		"pako": "catalog:",
 		"prettier": "catalog:",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
