refactor: 收拢消息角色类型和常量定义到 core 子包, 统一引用方式, 提升后续可维护性

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -43,6 +43,7 @@
 		"vitest": "catalog:"
 	},
 	"dependencies": {
+		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^"
 	},
 	"peerDependencies": {
