--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "./tsconfig.prod.json",
 	"compilerOptions": {
 		"paths": {
+			"@dify-chat/core": ["../core/src/index.ts"],
 			"@dify-chat/helpers": ["../helpers/src/index.ts"]
 		}
 	}
