--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,6 +11,11 @@
 		"access": "public",
 		"registry": "https://registry.npmjs.org"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/lexmin0412/dify-chat.git",
+		"directory": "packages/api"
+	},
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
