--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,6 +16,11 @@
 		"access": "public",
 		"registry": "https://registry.npmjs.org"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/lexmin0412/dify-chat.git",
+		"directory": "packages/components"
+	},
 	"type": "module",
 	"exports": {
 		".": {
@@ -72,6 +77,7 @@
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
+		"@dify-chat/theme": "workspace:^",
 		"@heroicons/react": "catalog:",
 		"@lexmin0412/markdown-it-echarts": "catalog:",
 		"@svgdotjs/svg.js": "catalog:",
