fix(theme): 修复 package.json 中的 react 版本声明错误

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -40,7 +40,7 @@
 		"eslint": "catalog:",
 		"globals": "catalog:",
 		"prettier": "catalog:",
-		"react": "catalog:v",
+		"react": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	},
