chore: 主包和 components 增加 lucide 依赖

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -87,6 +87,7 @@
 		"echarts-for-react": "catalog:",
 		"katex": "catalog:",
 		"lodash-es": "catalog:",
+		"lucide-react": "catalog:",
 		"markdown-it": "catalog:",
 		"markdown-it-katex-gpt": "catalog:",
 		"mermaid": "catalog:",
