--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"antd": "catalog:",
 		"antd-style": "catalog:",
 		"classnames": "catalog:",
+		"lucide-react": "catalog:",
 		"markdown-it": "catalog:",
 		"openai": "catalog:",
 		"pure-react-router": "catalog:",
