--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -59,6 +59,7 @@ catalog:
   koa-router: ^12.0.0
   lint-staged: ^15.5.1
   lodash-es: ^4.17.21
+  lucide-react: ^0.508.0
   markdown-it: ^14.1.0
   markdown-it-katex-gpt: ^1.1.1
   mermaid: ^11.6.0
