chore: add rybbit analytics deps

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
+		"@rybbit/js": "catalog:",
 		"@toolkit-fe/clipboard": "catalog:",
 		"@toolkit-fe/where-am-i": "catalog:",
 		"@types/pako": "catalog:",
