--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -56,6 +56,7 @@
 		"@storybook/test": "catalog:",
 		"@testing-library/jest-dom": "catalog:",
 		"@testing-library/react": "catalog:",
+		"@types/hast": "catalog:",
 		"@types/lodash-es": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
@@ -85,6 +86,7 @@
 		"classnames": "catalog:",
 		"dompurify": "catalog:",
 		"echarts-for-react": "catalog:",
+		"hast": "catalog:",
 		"katex": "catalog:",
 		"lodash-es": "catalog:",
 		"lucide-react": "catalog:",
