--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,6 +32,7 @@ catalog:
   '@toolkit-fe/clipboard': ^0.1.22
   '@toolkit-fe/where-am-i': ^0.1.22
   '@trivago/prettier-plugin-sort-imports': ^5.2.2
+  '@types/hast': ^3.0.4
   '@types/lodash-es': ^4.17.12
   '@types/markdown-it': ^14.1.2
   '@types/node': ^22.14.1
@@ -51,6 +52,7 @@ catalog:
   eslint-plugin-react: ^7.37.5
   eslint-plugin-react-hooks: ^5.2.0
   globals: ^16.0.0
+  hast: ^1.0.0
   husky: ^9.1.7
   jsdom: ^26.1.0
   katex: ^0.16.22
