--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,3 @@
-
 #中国大陆镜像加速
 #crpi-0x1c1loz9e1iim0b.cn-hangzhou.personal.cr.aliyuncs.com/hs08/dify-chat:v0.1.0
 #swr.cn-east-3.myhuaweicloud.com/dify-chat/dify-chat:v0.1.0
@@ -37,3 +36,5 @@ NGINX_KEEPALIVE_TIMEOUT=60
 NGINX_CLIENT_MAX_BODY_SIZE=100M
 #详细日志，相当于日志等级notice
 NGINX_ENTRYPOINT_QUIET_LOGS=1
+#时区
+TZ=Asia/Shanghai
