--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ catalog:
   '@ant-design/icons': ^5.6.1
   '@ant-design/x': ^1.1.1
   '@biomejs/biome': ^1.9.4
+  '@changesets/cli': ^2.29.2
   '@eslint/compat': ^1.2.8
   '@eslint/js': ^9.24.0
   '@fingerprintjs/fingerprintjs': ^4.6.2
