--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,7 @@
 	"changelog": "@changesets/cli/changelog",
 	"commit": false,
 	"fixed": [],
-	"linked": [],
+	"linked": ["*"],
 	"access": "restricted",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
