--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,8 +2,7 @@
 	"$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
 	"changelog": "@changesets/cli/changelog",
 	"commit": false,
-	"fixed": [],
-	"linked": ["*"],
+	"fixed": [["@dify-chat/*"]],
 	"access": "restricted",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
