--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -53,6 +53,7 @@
 	},
 	"peerDependencies": {
 		"react": ">=16.9.0",
-		"react-dom": ">=16.9.0"
+		"react-dom": ">=16.9.0",
+		"antd": ">=5.0.0"
 	}
 }
