--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,28 +1,14 @@
 {
 	"compilerOptions": {
-		"lib": ["DOM", "ES2020"],
-		"jsx": "react-jsx",
-		"target": "ES2020",
-		"noEmit": true,
-		"skipLibCheck": true,
-		"useDefineForClassFields": true,
-
-		/* modules */
+		"lib": ["DOM", "ES2021"],
 		"module": "ESNext",
+		"jsx": "react-jsx",
+		"strict": true,
+		"skipLibCheck": true,
 		"isolatedModules": true,
 		"resolveJsonModule": true,
-		"moduleResolution": "Bundler",
-		"allowImportingTsExtensions": true,
-
-		/* type checking */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-
-		"baseUrl": "./",
-		"paths": {
-			"@/*": ["src/*"]
-		}
+		"moduleResolution": "bundler",
+		"useDefineForClassFields": true
 	},
-	"include": ["src"]
+	"include": ["packages"]
 }
