chore(rsbuild): monorepo 子包关联改造, 热更新恢复

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,9 +1,24 @@
 {
-	"extends": "./tsconfig.prod.json",
 	"compilerOptions": {
-		"paths": {
-			"@dify-chat/core": ["../core/src/index.ts"],
-			"@dify-chat/helpers": ["../helpers/src/index.ts"]
+		"lib": ["ES2021"],
+		"module": "ESNext",
+		"strict": true,
+		"skipLibCheck": true,
+		"isolatedModules": true,
+		"resolveJsonModule": true,
+		"moduleResolution": "bundler",
+		"useDefineForClassFields": true,
+		"composite": true,
+		"rootDir": "src",
+		"outDir": "dist"
+	},
+	"include": ["src"],
+	"references": [
+		{
+			"path": "../core"
+		},
+		{
+			"path": "../helpers"
 		}
-	}
+	]
 }
