--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -8,7 +8,10 @@
 		"isolatedModules": true,
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
-		"useDefineForClassFields": true
+		"useDefineForClassFields": true,
+		"composite": true,
+		"rootDir": "src",
+		"outDir": "dist"
 	},
 	"include": ["src"]
 }
