--- a/packages/api/tsconfig.prod.json
+++ b/packages/api/tsconfig.prod.json
@@ -1,13 +1,3 @@
 {
-	"compilerOptions": {
-		"lib": ["ES2021"],
-		"module": "ESNext",
-		"strict": true,
-		"skipLibCheck": true,
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"moduleResolution": "bundler",
-		"useDefineForClassFields": true
-	},
-	"include": ["src"]
+	"extends": "./tsconfig.json"
 }
