--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -4,12 +4,12 @@
 	"version": "0.2.0",
 	"scripts": {
 		"build:pkgs": "pnpm --filter @dify-chat/* build",
-		"build": "pnpm build:pkgs && rsbuild build",
+		"build:app": "rsbuild build",
+		"build": "pnpm build:pkgs && pnpm build:app",
 		"dev": "rsbuild dev",
 		"format": "prettier --write .",
 		"lint": "eslint .",
-		"preview": "rsbuild preview",
-		"prepare": "husky"
+		"preview": "rsbuild preview"
 	},
 	"packageManager": "pnpm@10.8.1",
 	"dependencies": {
@@ -44,6 +44,7 @@
 		"@rsbuild/core": "catalog:",
 		"@rsbuild/plugin-less": "catalog:",
 		"@rsbuild/plugin-react": "catalog:",
+		"@rsbuild/plugin-source-build": "^1.0.2",
 		"@trivago/prettier-plugin-sort-imports": "catalog:",
 		"@types/markdown-it": "catalog:",
 		"@types/node": "catalog:",
