--- a/packages/react-app/tsconfig.json
+++ b/packages/react-app/tsconfig.json
@@ -1,13 +1,45 @@
 {
-	"extends": ["./tsconfig.prod.json"],
 	"compilerOptions": {
+		"lib": ["DOM", "ES2020"],
+		"jsx": "react-jsx",
+		"target": "ES2020",
+		"noEmit": true,
+		"skipLibCheck": true,
+		"useDefineForClassFields": true,
+
+		/* modules */
+		"module": "ESNext",
+		"isolatedModules": true,
+		"resolveJsonModule": true,
+		"moduleResolution": "Bundler",
+		"allowImportingTsExtensions": true,
+
+		/* type checking */
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+
+		"baseUrl": "./",
 		"paths": {
-			"@/*": ["src/*"],
-			"@dify-chat/api": ["../api/src/index.ts"],
-			"@dify-chat/components": ["../components/src/index.tsx"],
-			"@dify-chat/core": ["../core/src/index.ts"],
-			"@dify-chat/helpers": ["../helpers/src/index.ts"],
-			"@dify-chat/theme": ["../theme/src/index.ts"]
+			"@/*": ["src/*"]
 		}
-	}
+	},
+	"include": ["src"],
+	"references": [
+		{
+			"path": "../api"
+		},
+		{
+			"path": "../components"
+		},
+		{
+			"path": "../core"
+		},
+		{
+			"path": "../helpers"
+		},
+		{
+			"path": "../theme"
+		}
+	]
 }
