chore: 子包构建命令移到根目录, 去除 react-app 自身构建前的 build:pkgs 步骤

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -3,9 +3,7 @@
 	"private": true,
 	"version": "0.2.0",
 	"scripts": {
-		"build:pkgs": "pnpm --filter @dify-chat/* build",
-		"build:app": "rsbuild build",
-		"build": "pnpm build:pkgs && pnpm build:app",
+		"build": "rsbuild build",
 		"dev": "rsbuild dev",
 		"format": "prettier --write .",
 		"lint": "eslint .",
