--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.2.0",
 	"scripts": {
 		"build:pkgs": "pnpm --filter @dify-chat/* build",
-		"build": "pnpm --filter dify-chat-app-react build",
+		"build": "pnpm build:pkgs && pnpm --filter dify-chat-app-react build",
 		"dev": "pnpm --filter dify-chat-app-react dev",
 		"format": "prettier --write .",
 		"lint": "eslint .",
