chore(docker): user friendly modify (#281)
用户易用性改进
1、不使用certbot时访问根目录301跳转至dify-chat
2、.env配置增加nginx默认server_name

---------

Co-authored-by: hitechbeijing <hitechbeijing@hitechbeijingdeMacBook-Pro.local>

--- a/docker/.env
+++ b/docker/.env
@@ -20,7 +20,7 @@ NGINX_SSL_CERT_KEY_FILENAME=
 #nginx ssl协议
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
 #nginx server_name
-NGINX_SERVER_NAME=
+NGINX_SERVER_NAME=dify-chat
 #CERTBOT SSL(letsencrypt)
 CERTBOT_DOMAIN=
 NGINX_ENABLE_CERTBOT_CHALLENGE=false
